[package]
name = "telraam-rs"
version = "0.1.0"
edition = "2021"
authors = ["The Radical Bike Lobby"]
description = "Teraam API CLI and library for collecting data from the IOT devices"
readme = "README.md"

keywords = ["telraam"]
homepage = "https://github.com/radical-bike-lobby"
repository = "https://github.com/radical-bike-lobby/telraam-rs"
license = "MIT"

[lib]
name = "telraam"

[[bin]]
name = "telraam"
path = "src/main.rs"
required-features = ["clap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = [
    "cargo",
    "derive",
    "env",
], optional = true }
geojson = "0.24.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "brotli",
    "deflate",
    "gzip",
    "native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
thiserror = "1.0.50"
